Fixed pricing info and alignment

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -432,7 +432,7 @@ span.iconExtraNotes{
   margin: 12px;
  }
  .delivery-left{
-   width: 205px;
+   width: 210px;
   border: 1px solid;
   border-color: var(--lavantru-red);
   border-radius: 10px 0px 0px 10px;
@@ -440,9 +440,10 @@ span.iconExtraNotes{
   text-align: center;
   line-height: 28px;
   padding: 4px 8px;
+  margin-left: 30px;
 }
 .delivery-right{
-  width: 205px;
+  width: 210px;
   border: 1px solid;
   border-color: var(--lavantru-red);
   border-radius: 0px 10px 10px 0px;
